// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-cost-optimization - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Identify Azure cost savings from usage and spending data. USE FOR: optimize Azure costs, reduce Azure spending/expenses, analyze Azure costs, find cost savings, generate cost optimization report, identify orphaned resources to delete, rightsize VMs, reduce waste, optimize Redis costs, optimize storage costs, AKS cost analysis add-on, namespace cost, cost spike, anomaly, budget alert, AKS cost visibility. DO NOT USE FOR: deploying resources (use azure-deploy), general Azure diagnostics (use azure-diagnostics), security issues (use azure-security)",
  "extractedKeywords": [
    "add-on",
    "aks",
    "alert",
    "analysis",
    "analyze",
    "anomaly",
    "app service",
    "azure",
    "azure-deploy",
    "azure-diagnostics",
    "azure-security",
    "budget",
    "cli",
    "container",
    "cosmos",
    "cost",
    "costs",
    "data",
    "delete",
    "deploying",
    "diagnostics",
    "expenses",
    "find",
    "from",
    "function",
    "general",
    "generate",
    "identify",
    "issues",
    "key vault",
    "kubernetes",
    "mcp",
    "monitor",
    "namespace",
    "optimization",
    "optimize",
    "orphaned",
    "redis",
    "reduce",
    "report",
    "resources",
    "rightsize",
    "savings",
    "security",
    "spending",
    "spike",
    "sql",
    "storage",
    "usage",
    "validation",
    "visibility",
    "waste",
  ],
  "name": "azure-cost-optimization",
}
`;

exports[`azure-cost-optimization - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "add-on",
  "aks",
  "alert",
  "analysis",
  "analyze",
  "anomaly",
  "app service",
  "azure",
  "azure-deploy",
  "azure-diagnostics",
  "azure-security",
  "budget",
  "cli",
  "container",
  "cosmos",
  "cost",
  "costs",
  "data",
  "delete",
  "deploying",
  "diagnostics",
  "expenses",
  "find",
  "from",
  "function",
  "general",
  "generate",
  "identify",
  "issues",
  "key vault",
  "kubernetes",
  "mcp",
  "monitor",
  "namespace",
  "optimization",
  "optimize",
  "orphaned",
  "redis",
  "reduce",
  "report",
  "resources",
  "rightsize",
  "savings",
  "security",
  "spending",
  "spike",
  "sql",
  "storage",
  "usage",
  "validation",
  "visibility",
  "waste",
]
`;
